Fix iframe bug on IOS (add iframe script & a new web page with only the game)

--- a/Assets/WebGLTemplates/EndoTravail/TemplateData/style.css
+++ b/Assets/WebGLTemplates/EndoTravail/TemplateData/style.css
@@ -1,7 +1,7 @@
 * { caret-color: transparent; outline: none; }
 body { height: 100%; width: 100%; margin: 0; padding: 0; overflow: hidden; }
 #unity-canvas { position: absolute; width: 100%; height: 100%; left: 0; top: 0; background: #8E3249; }
-#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
+#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 2; display: none }
 #unity-logo { width: 250px; height: 130px; background: url('logo-endo-white.png') no-repeat center; background-size: contain; }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin: 0 auto; background: url('progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
